Add markdown cells to enhance structure and clarity in the data scraping notebook

--- a/notebooks/data scraping autohero.ipynb
+++ b/notebooks/data scraping autohero.ipynb
@@ -1,6 +1,22 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "dd2b0c4d",
+   "metadata": {},
+   "source": [
+    "# Collecter des données sur le site autohero.com"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c0b2d140",
+   "metadata": {},
+   "source": [
+    "1. Importer les librairies"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "1b4af1b8",
@@ -17,6 +33,14 @@
     "from selenium.webdriver.support import expected_conditions as EC\n",
     "from datetime import datetime\n",
     "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "63e7bb05",
+   "metadata": {},
+   "source": [
+    "2. Identifier les données à scraper + l'attribut CSS correspondant"
    ]
   },
   {
@@ -47,6 +71,14 @@
     "    \"crit_air\" : \"[data-qa-selector= 'feature-section-item-emissionSticker-body']\",\n",
     "    \"usage_commerciale_anterieure\" : \"[data-qa-selector= 'feature-section-item-wasInCommercialUse-body']\",\n",
     "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0e07028b",
+   "metadata": {},
+   "source": [
+    "3. Définir les fonctions pour le scraping"
    ]
   },
   {
@@ -229,6 +261,14 @@
     "    print(\"Fin du scraping !\")\n",
     "\n",
     "    return df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ec97b1de",
+   "metadata": {},
+   "source": [
+    "4. Lancer le scraping"
    ]
   },
   {
