Add warning message about potential long execution time in scraping section

--- a/notebooks/data scraping autohero.ipynb
+++ b/notebooks/data scraping autohero.ipynb
@@ -268,7 +268,9 @@
    "id": "ec97b1de",
    "metadata": {},
    "source": [
-    "4. Lancer le scraping"
+    "4. Lancer le scraping  \n",
+    "\n",
+    "<b>Attention</b>: l'exécution peut durer des heures"
    ]
   },
   {
