Enhance warning message in scraping section with additional details on execution time and parameters

--- a/notebooks/data scraping autohero.ipynb
+++ b/notebooks/data scraping autohero.ipynb
@@ -270,7 +270,9 @@
    "source": [
     "4. Lancer le scraping  \n",
     "\n",
-    "<b>Attention</b>: l'exécution peut durer des heures"
+    "<b>Attention</b>: l'exécution peut durer des heures  \n",
+    "- Année de mise en circulation: à partir de 2017  \n",
+    "- Kilométrage maximal: 100 000 Kms (en moyenne, un contrat de location dure 36 mois avec le kilométrage moyen de 60 000 Kms)"
    ]
   },
   {
