Enhance markdown formatting for clarity in data scraping notebook sections

--- a/notebooks/data scraping autohero.ipynb
+++ b/notebooks/data scraping autohero.ipynb
@@ -13,7 +13,7 @@
    "id": "c0b2d140",
    "metadata": {},
    "source": [
-    "1. Importer les librairies"
+    "## 1. Importer les librairies"
    ]
   },
   {
@@ -40,7 +40,7 @@
    "id": "63e7bb05",
    "metadata": {},
    "source": [
-    "2. Identifier les données à scraper + l'attribut CSS correspondant"
+    "## 2. Identifier les données à scraper + l'attribut CSS correspondant"
    ]
   },
   {
@@ -78,7 +78,7 @@
    "id": "0e07028b",
    "metadata": {},
    "source": [
-    "3. Définir les fonctions pour le scraping"
+    "## 3. Définir les fonctions pour le scraping"
    ]
   },
   {
@@ -268,7 +268,7 @@
    "id": "ec97b1de",
    "metadata": {},
    "source": [
-    "4. Lancer le scraping  \n",
+    "### 4. Lancer le scraping  \n",
     "\n",
     "<b>Attention</b>: l'exécution peut durer des heures  \n",
     "- Année de mise en circulation: à partir de 2017  \n",
